--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,8 @@
 body {
   background-color: darkgrey;
   background-size: cover;
-  color: aliceblue;
+  background-image:linear-gradient(#134d71 10%, #78a7c6 60%);
+  color: rgb(208, 227, 243);
   display: flex;
   flex-wrap: wrap;
   /* font:, */
@@ -12,44 +13,47 @@ body {
   text-align: center;
 }
 
+h1 {
+  color: rgb(208, 227, 243);
+  font-size: 210%;
+  text-transform: inherit;
+}
+
 .left-container {
-display: flex;
-width: 30vw;
-border: 2px solid red;
+  display: flex;
+  width: 30vw;
+  border-right: 3px solid black;
 }
 
 .right-container {
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-justify-content: space-between;
-align-items: stretch;
-width: 69vw;
-border: 2px solid blue;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 69vw;
 }
 
 .article-data {
-display: flex;
-height: 70%;
-border: 2px solid green;
-flex-wrap: wrap;
-align-items: center;
-/* background-color: black; */
-justify-content: space-around;
+  display: flex;
+  height: 70%;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .left-container {
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-align-content: center;
-justify-content: space-evenly;
-border: 2px solid green;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-evenly;
 }
 
 .title-area {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  height: 20%
+  height: 20%;
+  border-bottom: 1px solid black;
 }
