--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,13 +19,13 @@ h1 {
   text-transform: inherit;
 }
 
-.left-container {
+.leftContainer {
   display: flex;
   width: 30vw;
   border-right: 3px solid black;
 }
 
-.right-container {
+.rightContainer {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -34,7 +34,7 @@ h1 {
   width: 69vw;
 }
 
-.article-data {
+.articleData {
   display: flex;
   height: 70%;
   flex-wrap: wrap;
@@ -42,7 +42,7 @@ h1 {
   justify-content: space-around;
 }
 
-.left-container {
+.leftContainer {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -50,7 +50,7 @@ h1 {
   justify-content: space-evenly;
 }
 
-.title-area {
+.titleArea {
   display: flex;
   align-items: center;
   justify-content: space-around;
